--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
                 <div class="header-line">
                     <div class="nav">
                         <a class="my-page">Homepage &#9749;</a>
-                        <a data-content="Главная" href="@">Главная &#9875;</a>
-                        <a data-content="Контакты" href="@">Контакты &#9734;</a>
-                        <a data-content="Достижения" href="@">Достижения &#36;</a>
+                        <a data-content="Главная" href="#">Главная &#9875;</a>
+                        <a data-content="Контакты" href="#">Контакты &#9734;</a>
+                        <a data-content="Достижения" href="#">Достижения &#36;</a>
                         <a data-content="Feedback" href="feedback.html">Feedback &#8258;</a>
                         <a data-content="Log in" href="login.html">Log in &#8617;</a>
                     </div>
@@ -112,7 +112,7 @@
             <div class="bottom-items">
                 <a class="my-name">&#9802; Анастасия Быкасова, 211-361</a>
                 <a class="text-email">&#9993; Почта:</a>
-                <a class="email" href="@">nastybykasova@gmail.com</a>
+                <a class="email" href="#">nastybykasova@gmail.com</a>
                 <a class="text-phone">&#9990; Телефон:</a>
                 <a class="number-phone" href="@">+7(999)999-99-99</a>
             </div>
