--- a/login.html
+++ b/login.html
@@ -23,9 +23,13 @@
             <form class="login_form" action="" method="post" name="login_form">
                 <h1>Log in</h1>
                 <div class="elements-login">
-                    <p><label for="name">Login:</label></p>
-                    <p><label for="name">Password:</label></p>
-                    <p><label for="name">Remember me</label></p>
+                    <p>Login: <input type="text" name="log-name"placeholder="Enter login" size="18"/></p>
+                    <p>Password: <input type="password" name="pass-name"placeholder="Enter password" size="18"/></p>
+                    <p>Remember me <input type="checkbox"/></p>
+                    <p><div class="send-button">
+                            <button type="reset">Send</button>
+                        </div>
+                    </p>
                 </div>
             </form>
             </div>
