--- a/feedback.html
+++ b/feedback.html
@@ -23,15 +23,25 @@
             <form class="feedback_form" action="" method="post" name="feedback_form">
                 <h1>Feedback</h1>
                 <div class="elements-fb">
-                    <p><label for="name">Фамилия:</label></p>
-                    <p><label for="name">Имя:</label></p>
-                    <p><label for="name">Отчество:</label></p>
-                    <p><label for="name">Email:</label></p>
-                    <p><label for="name">Откуда узнали о нас:</label></p>
-                    <p><label for="name">Тип обращения:</label></p>
-                    <p><label for="name">Текст сообщения:</label></p>
-                    <p><label for="name">Вложения:</label></p>
-                    <p><label for="name">Даю согласие на обработку персональных данных</label></p>
+                    <p>Фамилия: <input type="text" name="surname-input"placeholder="Введите фамилию" size="18"/></p>
+                    <p>Имя: <input type="text" name="name-input"placeholder="Введите имя" size="18"/></p>
+                    <p>Отчество: <input type="text" name="midname-input"placeholder="Введите отчество" size="18"/></p>
+                    <p>Email: <input type="email" name="email-input"placeholder="Введите email" size="18"/></p>
+                    <p>Откуда узнали о нас? </p>
+                    <textarea name="Tell us" rows="5" wrap="soft"></textarea>
+                    <p>Тип обращения: 
+                    <select id="letter-type">
+                        <option value=”1”>Предложение</option>
+                        <option value=”2”>Жалоба</option>                        
+                    </select></p>
+                    <p>Текст сообщения: </p>
+                    <textarea name="Tell us" rows="5" wrap="soft"></textarea>
+                    <p>Вложения: <input type="file" name="file-input" multiple></p>
+                    <p>Даю согласие на обработку персональных данных <input type="checkbox"/></p>
+                    <p><div class="send-button">
+                            <button type="reset">Send</button>
+                        </div>
+                    </p>
                 </div>
             </form>
             </div>
