--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                                 <li>даю согласие на обработку персональных данных (чекбокс)</li>
                             </ul>
                         </td>
-                        <td>In progress &#10008;</td>
+                        <td>Done &#10004;</td>
                     </tr>
                     <tr>
                         <td>2</td>
@@ -101,7 +101,7 @@
                                 <li>"запомнить меня" (чекбокс)</li>
                             </ul>
                         </td>
-                        <td>In progress &#10008;</td>
+                        <td>Done &#10004;</td>
                     </tr>
                 </tbody>
             </table>
