editing tables as "id"s from different classes to the one

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="bird">
                 <img src="bird2.png" height="300px">
             </div>
-            <table class="table1">
+            <table class="table" id="table1">
                 <caption>Список выполненных заданий (ЛР №1)</caption>
                 <thead>
                     <tr>
@@ -64,7 +64,7 @@
                         <td>Done &#10004;</td></tr>
                         </tbody>
             </table>
-            <table class="table2">
+            <table class="table" id="table2">
                 <caption>Список выполненных заданий (ЛР №2)</caption>
                 <thead>
                     <tr>
