--- a/index.html
+++ b/index.html
@@ -17,18 +17,26 @@
                 <div class="header-line">
                     <div class="nav">
                         <a class="my-page">Homepage &#9749;</a>
-                        <a data-content="Главная" href="#">Главная &#9875;</a>
                         <a data-content="Контакты" href="#">Контакты &#9734;</a>
                         <a data-content="Достижения" href="#">Достижения &#36;</a>
                         <a data-content="Feedback" href="feedback.html">Feedback &#8258;</a>
-                        <a data-content="Log in" href="login.html">Log in &#8617;</a>
+                        <a data-content="Log in" href="login.html">Log in &#10149;</a>
                     </div>
                 </div>
             </div>
         </div>
         <div class="elements">
-            <div class="bird">
+            <div class="text-desc">
+                <h1 class="description">It's a simple text</h1>
+                <p>Создание сайта нацелено на получение<br> знаний об <b>HTML, CSS, 
+                    PHP</b> и <b>JavaScript</b>. 
+                </p>
+            </div>
+            <div class="bird-pic">
                 <img src="bird2.png" height="300px">
+            </div>
+            <div class="cat-pic">
+                <img src="cat.png" height="200px">
             </div>
             <table class="table" id="table1">
                 <caption>Список выполненных заданий (ЛР №1)</caption>
@@ -112,9 +120,10 @@
             <div class="bottom-items">
                 <a class="my-name">&#9802; Анастасия Быкасова, 211-361</a>
                 <a class="text-email">&#9993; Почта:</a>
-                <a class="email" href="#">nastybykasova@gmail.com</a>
+                <!--<a class="email" href="#">nastybykasova@gmail.com</a>-->
+                <a class="email" href="#">@gmail.com</a>
                 <a class="text-phone">&#9990; Телефон:</a>
-                <a class="number-phone" href="@">+7(999)999-99-99</a>
+                <a class="number-phone" href="#">+7(999)999-99-99</a>
             </div>
         </div>
     </footer>  
