--- a/feedback.html
+++ b/feedback.html
@@ -12,11 +12,24 @@
     <header>
     </header>
     <main>
-        <div class="background-login">
+        <div class="header">
             <div class="container">
+                <div class="header-line">
+                    <div class="nav">
+                        <a data-content="Homepage" class="my-page" href="index.html">Homepage &#9749;</a>
+                        <a data-content="Контакты" href="#">Контакты &#9734;</a>
+                        <a data-content="Достижения" href="#">Достижения &#36;</a>
+                        <a data-content="Log in" href="login.html">Log in &#10149;</a>
+                        <a data-content="Feedback" href="feedback.html">Feedback &#8258;</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="background-login">
+            <div class="container-fb-form">
             <form class="feedback_form" method="post" name="feedback_form">
                 <h1>Feedback</h1>
-                <p><a class="hp-back" href="index.html"><i>На главную</i> &#8617;</a></p>
+                <!--<p><a class="hp-back" href="index.html"><i>На главную</i> &#8617;</a></p>-->
                 <div class="elements-fb">
                     <p>Фамилия: <input type="text" name="surname-input"placeholder="Введите фамилию" size="18"/></p>
                     <p>Имя: <input type="text" name="name-input"placeholder="Введите имя" size="18"/></p>
