addinng headers and footest to login and feedback forms

--- a/feedback.html
+++ b/feedback.html
@@ -9,9 +9,8 @@
     <title>Feedback_page</title>
 </head>
 <body>
+
     <header>
-    </header>
-    <main>
         <div class="header">
             <div class="container">
                 <div class="header-line">
@@ -25,10 +24,14 @@
                 </div>
             </div>
         </div>
+    </header>
+
+    <main>
+        
         <div class="background-login">
             <div class="container-fb-form">
             <form class="feedback_form" method="post" name="feedback_form">
-                <h1>Feedback</h1>
+                <h1 class="name-fb">Feedback</h1>
                 <!--<p><a class="hp-back" href="index.html"><i>На главную</i> &#8617;</a></p>-->
                 <div class="elements-fb">
                     <p>Фамилия: <input type="text" name="surname-input"placeholder="Введите фамилию" size="18"/></p>
@@ -63,5 +66,15 @@
         </div>
     </main>
     <footer>
-    </footer>
+        <div class="down-line">
+            <div class="bottom-items">
+                <a class="my-name">&#9802; Анастасия Быкасова, 211-361</a>
+                <a class="text-email">&#9993; Почта:</a>
+                <!--<a class="email" href="#">nastybykasova@gmail.com</a>-->
+                <a class="email" href="#">@gmail.com</a>
+                <a class="text-phone">&#9990; Телефон:</a>
+                <a class="number-phone" href="#">+7(999)999-99-99</a>
+            </div>
+        </div>
+    </footer>  
 </body>
