--- a/login.html
+++ b/login.html
@@ -9,9 +9,8 @@
     <title>Login_page</title>
 </head>
 <body>
+
     <header>
-    </header>
-    <main>
         <div class="header">
             <div class="container">
                 <div class="header-line">
@@ -25,11 +24,14 @@
                 </div>
             </div>
         </div>
+    </header>
+    
+    <main>
+        
         <div class="background-login">
             <div class="container-login-form">
             <form class="login_form" method="post" name="login_form">
                 <h1>Log in</h1>
-                <!--<p><a class="hp-back" href="index.html"><i>На главную</i> &#8617;</a></p>-->
                 <div class="elements-login">
                     <p>Login: <input type="text" name="log-name"placeholder="Enter login" size="18"/></p>
                     <p>Password: <input type="password" name="pass-name"placeholder="Enter password" size="18"/></p>
@@ -45,5 +47,15 @@
         </div>
     </main>
     <footer>
-    </footer>
+        <div class="down-line">
+            <div class="bottom-items">
+                <a class="my-name">&#9802; Анастасия Быкасова, 211-361</a>
+                <a class="text-email">&#9993; Почта:</a>
+                <!--<a class="email" href="#">nastybykasova@gmail.com</a>-->
+                <a class="email" href="#">@gmail.com</a>
+                <a class="text-phone">&#9990; Телефон:</a>
+                <a class="number-phone" href="#">+7(999)999-99-99</a>
+            </div>
+        </div>
+    </footer>  
 </body>
