--- a/index_js.html
+++ b/index_js.html
@@ -11,6 +11,23 @@
     <title>Калькулятор</title>
 </head>
 <body>
+    <header> 
+        <div class="header">
+            <div class="container">
+                <div class="header-line">
+                    <div class="nav">
+                        <a data-content="Homepage" class="my-page" href="index.php">Homepage &#9749;</a>
+                        <a data-content="Contacts" href="#go-to-footer">Contacts &#9734;</a>
+                        <a data-content="Achievements" href="achievements.php">Achievements &#36;</a>
+                        <a data-content="Log in" href="login.php">Log in &#10149;</a>
+                        <a data-content="Feedback" href="feedback.php">Feedback &#8258;</a>
+                        <a data-content="Math-functions" href="math.php">Math-functions</a>
+                        <a data-content="Калькулятор" href="index_js.html">Калькулятор &#128425;</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
     <main>
         <div class="calc-container">
             <div class="screen">
