--- a/index_js.html
+++ b/index_js.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles_js.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Prompt&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nabla&family=Open+Sans:ital,wght@0,400;0,500;1,400;1,500&family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="static/styles.css">
-    <script src="static/main_js.js" defer></script>
+    <script src="main_js.js" defer></script>
     <title>Калькулятор</title>
 </head>
 <body>
@@ -29,37 +31,88 @@
         </div>
     </header>
     <main>
-        <div class="calc-container">
-            <div class="screen">
-                <span></span>
+        <div class="elements">
+            <div class="calc-pic">
+                <img src="calc_1.jpg" height="500px">
             </div>
-            <div class="buttons">
-                <div class="digits">
-                    <button class="key digit">7</button>
-                    <button class="key digit">8</button>
-                    <button class="key digit">9</button>
-                    <button class="key digit">4</button>
-                    <button class="key digit">5</button>
-                    <button class="key digit">6</button>
-                    <button class="key digit">1</button>
-                    <button class="key digit">2</button>
-                    <button class="key digit">3</button>
-                    <button class="key digit">0</button>
-                    <button class="key digit">.</button>
-                    <button class="key" style="visibility: hidden;"></button>
+            <div class="calc-container">
+                <div class="screen">
+                    <span></span>
                 </div>
-                <div class="other">
-                    <button class="key operation">+</button>
-                    <button class="key operation">-</button>
-                    <button class="key operation">*</button>
-                    <button class="key operation">/</button>
-                    <button class="key bracket">(</button>
-                    <button class="key bracket">)</button>
-                    <button class="key result">=</button>
-                    <button class="key clear">C</button>
+                <div class="buttons">
+                    <div class="line_1">
+                        <button class="key_bracket_l">(</button>
+                        <button class="key_bracket_r">)</button>
+                        <button class="key_clear">C</button>
+                        <button class="key_operation_div">/</button>
+                    </div>
+                    <div class="line_2">
+                        <button class="key_digit_7">7</button>
+                        <button class="key_digit_8">8</button>
+                        <button class="key_digit_9">9</button>
+                        <button class="key_operation_mult">*</button>
+                    </div>
+                    <div class="line_3">
+                        <button class="key_digit_4">4</button>
+                        <button class="key_digit_5">5</button>
+                        <button class="key_digit_6">6</button>
+                        <button class="key_operation_sub">-</button>
+                    </div>
+                    <div class="line_4">
+                        <button class="key_digit_1">1</button>
+                        <button class="key_digit_2">2</button>
+                        <button class="key_digit_3">3</button>
+                    </div>
+                    <div class="line_5">
+                        <button class="key_digit_coma">.</button>
+                        <button class="key_digit_0">0</button>
+                        <button class="key_result">=</button>
+                    </div>
+                    <div class="extra_add">
+                        <button class="key_operation_add">+</button>
+                    </div>
                 </div>
+                <!--
+                <div class="buttons">
+                    <div class="digits">
+                        <button class="key_digit_1">1</button>
+                        <button class="key_digit_2">2</button>
+                        <button class="key_digit_3">3</button>
+                        <button class="key_digit_4">4</button>
+                        <button class="key_digit_5">5</button>
+                        <button class="key_digit_6">6</button>
+                        <button class="key_digit_7">7</button>
+                        <button class="key_digit_8">8</button>
+                        <button class="key_digit_9">9</button>
+                        <button class="key_digit_coma">.</button>
+                        <button class="key_digit_0">0</button>
+                        <button class="key" style="visibility: hidden;"></button>
+                    </div>
+                    <div class="other">
+                        <button class="key_operation_add">+</button>
+                        <button class="key_operation_sub">-</button>
+                        <button class="key_operation_mult">*</button>
+                        <button class="key_operation_div">/</button>
+                        <button class="key_bracket_l">(</button>
+                        <button class="key_bracket_r">)</button>
+                        <button class="key_result">=</button>
+                        <button class="key_clear">C</button>
+                    </div>
+                </div>-->
             </div>
         </div>
     </main>
+    <footer>
+        <a name="go-to-footer"></a>
+        <div class="down-line">
+            <div class="bottom-items">
+                <a class="my-name">&#9802; Анастасия Быкасова, 211-361</a>
+                <a class="text-email">&#9993; Почта:</a>
+                <a class="email" href="#">nastybykasova@gmail.com</a>
+                <a class="text-phone">&#9990; Телефон:</a>
+                <a class="number-phone" href="#">+7(999)999-99-99</a>
+            </div>
+        </div>
+    </footer>  
 </body>
 </html>
