adding clock on the new page

--- a/index_js.html
+++ b/index_js.html
@@ -25,6 +25,7 @@
                         <a data-content="Feedback" href="feedback.php">Feedback &#8258;</a>
                         <a data-content="Math-functions" href="math.php">Math-functions</a>
                         <a data-content="Калькулятор" href="index_js.html">Калькулятор &#128425;</a>
+                        <a data-content="Interesting" href="clock.html">Interesting</a>
                     </div>
                 </div>
             </div>
@@ -35,6 +36,7 @@
             <div class="calc-pic">
                 <img src="calc_1.jpg" height="500px">
             </div>
+            <output class="out-result">result</output>
             <div class="calc-container">
                 <div class="screen">
                     <span></span>
