--- a/index_js.html
+++ b/index_js.html
@@ -38,67 +38,34 @@
             <div class="calc-container">
                 <div class="screen">
                     <span></span>
+                    <output></output>
                 </div>
-                <div class="buttons">
-                    <div class="line_1">
-                        <button class="key_bracket_l">(</button>
-                        <button class="key_bracket_r">)</button>
-                        <button class="key_clear">C</button>
-                        <button class="key_operation_div">/</button>
-                    </div>
-                    <div class="line_2">
-                        <button class="key_digit_7">7</button>
-                        <button class="key_digit_8">8</button>
-                        <button class="key_digit_9">9</button>
-                        <button class="key_operation_mult">*</button>
-                    </div>
-                    <div class="line_3">
-                        <button class="key_digit_4">4</button>
-                        <button class="key_digit_5">5</button>
-                        <button class="key_digit_6">6</button>
-                        <button class="key_operation_sub">-</button>
-                    </div>
-                    <div class="line_4">
-                        <button class="key_digit_1">1</button>
-                        <button class="key_digit_2">2</button>
-                        <button class="key_digit_3">3</button>
-                    </div>
-                    <div class="line_5">
-                        <button class="key_digit_coma">.</button>
-                        <button class="key_digit_0">0</button>
-                        <button class="key_result">=</button>
-                    </div>
-                    <div class="extra_add">
-                        <button class="key_operation_add">+</button>
-                    </div>
-                </div>
-                <!--
                 <div class="buttons">
                     <div class="digits">
-                        <button class="key_digit_1">1</button>
-                        <button class="key_digit_2">2</button>
-                        <button class="key_digit_3">3</button>
-                        <button class="key_digit_4">4</button>
-                        <button class="key_digit_5">5</button>
-                        <button class="key_digit_6">6</button>
-                        <button class="key_digit_7">7</button>
-                        <button class="key_digit_8">8</button>
-                        <button class="key_digit_9">9</button>
-                        <button class="key_digit_coma">.</button>
-                        <button class="key_digit_0">0</button>
-                        <button class="key" style="visibility: hidden;"></button>
+                        <button class="key_digit" id="d_1">1</button>
+                        <button class="key_digit" id="d_2">2</button>
+                        <button class="key_digit" id="d_3">3</button>
+                        <button class="key_digit" id="d_4">4</button>
+                        <button class="key_digit" id="d_5">5</button>
+                        <button class="key_digit" id="d_6">6</button>
+                        <button class="key_digit" id="d_7">7</button>
+                        <button class="key_digit" id="d_8">8</button>
+                        <button class="key_digit" id="d_9">9</button>
+                        <button class="key_digit" id="d_c">.</button>
+                        <button class="key_digit" id="d_0">0</button>
+                        <button class="key" style="visibility: hidden;" id="b_hidden"></button>
                     </div>
                     <div class="other">
-                        <button class="key_operation_add">+</button>
-                        <button class="key_operation_sub">-</button>
-                        <button class="key_operation_mult">*</button>
-                        <button class="key_operation_div">/</button>
-                        <button class="key_bracket_l">(</button>
-                        <button class="key_bracket_r">)</button>
-                        <button class="key_result">=</button>
-                        <button class="key_clear">C</button>
+                        <button class="key_operation" id="o_a">+</button>
+                        <button class="key_clear" id="b_c">C</button>
+                        <button class="key_bracket" id="b_l">(</button>
+                        <button class="key_bracket" id="b_r">)</button>
+                        <button class="key_operation" id="o_d">/</button>
+                        <button class="key_operation" id="o_m">*</button>
+                        <button class="key_operation" id="o_s">-</button>
+                        <button class="key_result" id="bt_r">=</button>
                     </div>
-                </div>-->
+                </div>
             </div>
         </div>
     </main>
