everything is back

--- a/in_7lab.html
+++ b/in_7lab.html
@@ -2,19 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles_js.css">
+    <link rel="stylesheet" href="styles_7lab.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Island+Moments&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nabla&family=Open+Sans:ital,wght@0,400;0,500;1,400;1,500&family=Poppins&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="static/styles.css">
-    <script src="main_js.js" defer></script>
+    <script src="in_7lab.js" defer></script>
     <title>Калькулятор</title>
 </head>
 <body>
-    
     <header> 
         <div class="header">
             <div class="container">
@@ -25,8 +23,9 @@
                         <a data-content="Achievements" href="achievements.php">Achievements &#36;</a>
                         <a data-content="Log in" href="login.php">Log in &#10149;</a>
                         <a data-content="Feedback" href="feedback.php">Feedback &#8258;</a>
-                        <a data-content="Math-functions" href="math.php">Math-functions</a>
-                        <a data-content="Калькулятор" href="index_js.html">Калькулятор &#128425;</a>
+                        <a data-content="Math-functions" href="math.php">Math-functions &#9731;</a>
+                        <a data-content="Калькулятор" id="calc_7lab" href="in_7lab.html">Калькулятор &infin;</a>
+                        <a data-content="Cats facts" href="in_8lab.html">Cats facts &#10048;</a>
                     </div>
                 </div>
             </div>
