--- a/in_8lab.html
+++ b/in_8lab.html
@@ -2,15 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="in_8lab.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Island+Moments&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nabla&family=Open+Sans:ital,wght@0,400;0,500;1,400;1,500&family=Poppins&display=swap" rel="stylesheet">
+    <script src="in-8lab.js" defer></script>
     <title>Cats facts</title>
-    <link rel="stylesheet" href="static/styles.css">
-    <script src="static/main.js" defer></script>
 </head>
 <body>
     <header class="header">
         <nav>
-            <img class="logo" src="static/images/cat_white.png">
+            <img class="logo" src="cat_white.png" alt="a picture">
             <div class="title">Facts about cats</div>
         </nav>
     </header>
@@ -65,5 +70,19 @@
             </div>
         </div>
     </main>
+
+    <footer>
+        <a name="go-to-footer"></a>
+        <div class="down-line">
+            <div class="bottom-items">
+                <a class="my-name">&#9802; Анастасия Быкасова, 211-361</a>
+                <a class="text-email">&#9993; Почта:</a>
+                <a class="email" href="#">nastybykasova@gmail.com</a>
+                <a class="text-phone">&#9990; Телефон:</a>
+                <a class="number-phone" href="#">+7(999)999-99-99</a>
+            </div>
+        </div>
+    </footer>  
+
 </body>
 </html>
