--- a/in_7lab.html
+++ b/in_7lab.html
@@ -24,6 +24,7 @@
                 <a data-content="Math-functions" href="math_6lab.php">Math-functions &#9731;</a>
                 <a data-content="Калькулятор" id="calc_7lab" href="in_7lab.html">Калькулятор &infin;</a>
                 <a data-content="Cats facts" href="in_8lab.php">Cats facts &#10048;</a>
+                <a data-content="PHP functions" href="in_9lab.php">PHP functions &#10149;</a>
             </div>
         </div>
     </div>
