--- a/8lab.html
+++ b/8lab.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cats facts</title>
-    <link rel="stylesheet" href="8lab.css">
-    <script src="in_8lab.js" defer></script>
+    <link rel="stylesheet" href="styles/8lab.css">
+    <script src="js_files/in_8lab.js" defer></script>
 </head>
 <body>
     <header class="header">
         <nav>
-            <img class="logo" src="cat_white.png">
+            <img class="logo" src="pictures/cat_white.png">
             <div class="title">Facts about cats</div>
         </nav>
     </header>
