--- a/in_7lab.html
+++ b/in_7lab.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="in_7lab.css">
+    <link rel="stylesheet" href="styles/in_7lab.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Island+Moments&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nabla&family=Open+Sans:ital,wght@0,400;0,500;1,400;1,500&family=Poppins&display=swap" rel="stylesheet">
-    <script src="in_7lab.js" defer></script>
+    <script src="js_files/in_7lab.js" defer></script>
     <title>Калькулятор</title>
 </head>
 <body>
@@ -25,6 +25,7 @@
                 <a data-content="Калькулятор" id="calc_7lab" href="in_7lab.html">Калькулятор &infin;</a>
                 <a data-content="Cats facts" href="in_8lab.html">Cats facts &#10048;</a>
                 <a data-content="PHP functions" href="in_9lab.php">PHP functions &#10149;</a>
+                <a data-content="Text analysis" href="in_10lab.php">Text analysis</a>
             </div>
         </div>
     </div>
@@ -32,7 +33,7 @@
 	<main>	
 	<div class="elements">
         <div class="calc-pic">
-            <img src="calc_2.jpg" height="536px">
+            <img src="pictures/calc_2.jpg" height="536px">
         </div>
         <h6>calculator</h6>
         <div class="calc-container" id="calc-container">
